--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,51 +24,174 @@ jobs:
       with:
         node-version: '18'
     
-    - name: Create Android project
+    - name: Create Minimal Android Project
       run: |
         if [ ! -d "android" ]; then
-          echo "🚀 Creating Android project..."
+          echo "🚀 Creating Android project structure..."
           
-          # روش ۱: دانلود template از branch قدیمی
-          wget -q https://raw.githubusercontent.com/facebook/react-native/0.72-stable/template/android.tar.gz || \
-          curl -L https://raw.githubusercontent.com/facebook/react-native/0.72-stable/template/android.tar.gz -o android.tar.gz
+          # ساختار اصلی پوشه‌ها
+          mkdir -p android/app/src/main/java/com/invoiceapp
+          mkdir -p android/app/src/main/res
+          mkdir -p android/gradle/wrapper
           
-          if [ -f "android.tar.gz" ]; then
-            tar -xzf android.tar.gz
-            rm android.tar.gz
-          else
-            # روش ۲: اگر فایل tar نبود، از repo اصلی clone کنیم
-            echo "Using alternative method..."
-            git clone --depth 1 --branch 0.72-stable https://github.com/facebook/react-native.git temp-rn
-            # ساختار جدید React Native
-            mkdir -p android
-            # کپی فایل‌های ضروری
-            cp -r temp-rn/template/android/* android/ 2>/dev/null || true
-            # اگر ساختار قدیمی بود
-            if [ ! -f "android/app/build.gradle" ]; then
-              cp -r temp-rn/template/_android/* android/ 2>/dev/null || true
-            fi
-            rm -rf temp-rn
-          fi
+          # فایل‌های ضروری Gradle
+          cat > android/build.gradle << 'EOF'
+          buildscript {
+              ext {
+                  buildToolsVersion = "33.0.0"
+                  minSdkVersion = 21
+                  compileSdkVersion = 33
+                  targetSdkVersion = 33
+                  ndkVersion = "23.1.7779620"
+              }
+              repositories {
+                  google()
+                  mavenCentral()
+              }
+              dependencies {
+                  classpath("com.android.tools.build:gradle:7.3.1")
+                  classpath("com.facebook.react:react-native-gradle-plugin")
+              }
+          }
+          EOF
           
-          # تنظیم package name
-          if [ -f "android/app/build.gradle" ]; then
-            sed -i 's/com\.androidsample/com\.invoiceapp/g' android/app/build.gradle
-            sed -i 's/AndroidSample/InvoiceApp/g' android/app/build.gradle
-            echo "✅ Android project created successfully"
-          else
-            echo "❌ Failed to create Android project structure"
-            exit 1
-          fi
+          cat > android/app/build.gradle << 'EOF'
+          apply plugin: "com.android.application"
+          apply plugin: "com.facebook.react"
+          
+          project.ext.react = [
+              enableHermes: true
+          ]
+          
+          android {
+              namespace "com.invoiceapp"
+              compileSdkVersion rootProject.ext.compileSdkVersion
+              
+              defaultConfig {
+                  applicationId "com.invoiceapp"
+                  minSdkVersion rootProject.ext.minSdkVersion
+                  targetSdkVersion rootProject.ext.targetSdkVersion
+                  versionCode 1
+                  versionName "1.0"
+              }
+              
+              signingConfigs {
+                  debug {
+                      storeFile file('debug.keystore')
+                      storePassword 'android'
+                      keyAlias 'androiddebugkey'
+                      keyPassword 'android'
+                  }
+              }
+              
+              buildTypes {
+                  debug {
+                      signingConfig signingConfigs.debug
+                  }
+                  release {
+                      signingConfig signingConfigs.debug
+                      minifyEnabled false
+                      proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+                  }
+              }
+          }
+          
+          dependencies {
+              implementation("com.facebook.react:react-android")
+              implementation("com.facebook.react:hermes-android")
+          }
+          
+          apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
+          applyNativeModulesAppBuildGradle(project)
+          EOF
+          
+          # فایل‌های دیگر
+          cat > android/gradle.properties << 'EOF'
+          android.useAndroidX=true
+          android.enableJetifier=true
+          EOF
+          
+          cat > android/gradle/wrapper/gradle-wrapper.properties << 'EOF'
+          distributionBase=GRADLE_USER_HOME
+          distributionPath=wrapper/dists
+          distributionUrl=https\://services.gradle.org/distributions/gradle-7.5.1-all.zip
+          zipStoreBase=GRADLE_USER_HOME
+          zipStorePath=wrapper/dists
+          EOF
+          
+          cat > android/settings.gradle << 'EOF'
+          rootProject.name = 'InvoiceApp'
+          apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
+          applyNativeModulesSettingsGradle(settings)
+          include ':app'
+          EOF
+          
+          # فایل MainActivity
+          cat > android/app/src/main/java/com/invoiceapp/MainActivity.java << 'EOF'
+          package com.invoiceapp;
+          
+          import com.facebook.react.ReactActivity;
+          import com.facebook.react.ReactActivityDelegate;
+          import com.facebook.react.defaults.DefaultNewArchitectureEntryPoint;
+          import com.facebook.react.defaults.DefaultReactActivityDelegate;
+          
+          public class MainActivity extends ReactActivity {
+              @Override
+              protected String getMainComponentName() {
+                  return "InvoiceApp";
+              }
+              
+              @Override
+              protected ReactActivityDelegate createReactActivityDelegate() {
+                  return new DefaultReactActivityDelegate(
+                      this,
+                      getMainComponentName(),
+                      DefaultNewArchitectureEntryPoint.getFabricEnabled()
+                  );
+              }
+          }
+          EOF
+          
+          # AndroidManifest.xml
+          cat > android/app/src/main/AndroidManifest.xml << 'EOF'
+          <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+              <uses-permission android:name="android.permission.INTERNET" />
+              <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+              <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+              
+              <application
+                android:name=".MainApplication"
+                android:label="@string/app_name"
+                android:icon="@mipmap/ic_launcher"
+                android:roundIcon="@mipmap/ic_launcher_round"
+                android:allowBackup="false"
+                android:theme="@style/AppTheme">
+                <activity
+                  android:name=".MainActivity"
+                  android:label="@string/app_name"
+                  android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
+                  android:launchMode="singleTask"
+                  android:windowSoftInputMode="adjustResize"
+                  android:exported="true">
+                  <intent-filter>
+                      <action android:name="android.intent.action.MAIN" />
+                      <category android:name="android.intent.category.LAUNCHER" />
+                  </intent-filter>
+                </activity>
+              </application>
+          </manifest>
+          EOF
+          
+          echo "✅ Android project structure created successfully"
         else
           echo "📁 Android folder already exists"
         fi
     
-    - name: Generate package-lock
-      run: npm install --package-lock-only --legacy-peer-deps
-    
     - name: Install dependencies
-      run: npm install --legacy-peer-deps
+      run: |
+        npm install --legacy-peer-deps
+        # نصب dependencyهای React Native
+        npm install react-native@0.72.6 --legacy-peer-deps
     
     - name: Build APK
       run: |
@@ -76,6 +199,12 @@ jobs:
         chmod +x gradlew
         ./gradlew assembleRelease --no-daemon
     
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: invoice-app
+        path: android/app/build/outputs/apk/release/app-release.apk
+        retention-days: 7
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
