--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,37 +1,169 @@
-name: Android Build
+name: Build Android APK
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up JDK 17
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Setup Java
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
+        java-version: '11'
         distribution: 'temurin'
-
+    
     - name: Setup Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
-        node-version: '18'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build Android
+        node-version: '20'  # ✅ تغییر از 18 به 20
+        cache: 'npm'
+    
+    - name: Install specific React Native version
+      run: |
+        # نصب React Native 0.72.6 که با Node 18 سازگار باشد
+        npm install react-native@0.72.6 --legacy-peer-deps --save
+        npm install @react-navigation/native@^6.1.9 @react-navigation/stack@^6.3.20 --legacy-peer-deps
+        npm install react-native-screens@^3.22.0 react-native-safe-area-context@^4.6.3 --legacy-peer-deps
+        npm install react-native-gesture-handler@^2.12.0 --legacy-peer-deps
+        npm install @react-native-async-storage/async-storage@^1.18.2 --legacy-peer-deps
+        npm install react-native-vector-icons@^9.2.0 --legacy-peer-deps  # نسخه قدیمی‌تر
+    
+    - name: Create Android Project Structure
+      run: |
+        echo "🚀 Creating Android project..."
+        
+        # ساختار اصلی
+        mkdir -p android/app/src/main/java/com/invoiceapp
+        mkdir -p android/app/src/main/res
+        mkdir -p android/gradle/wrapper
+        
+        # فایل build.gradle سطح پروژه
+        cat > android/build.gradle << 'EOF'
+        buildscript {
+            ext {
+                buildToolsVersion = "33.0.0"
+                minSdkVersion = 21
+                compileSdkVersion = 33
+                targetSdkVersion = 33
+                ndkVersion = "23.1.7779620"
+                kotlinVersion = "1.8.0"
+            }
+            repositories {
+                google()
+                mavenCentral()
+            }
+            dependencies {
+                classpath("com.android.tools.build:gradle:7.3.1")
+                classpath("com.facebook.react:react-native-gradle-plugin")
+                classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+            }
+        }
+        EOF
+        
+        # فایل app/build.gradle
+        cat > android/app/build.gradle << 'EOF'
+        apply plugin: "com.android.application"
+        apply plugin: "com.facebook.react"
+        apply plugin: "org.jetbrains.kotlin.android"
+        
+        project.ext.react = [
+            enableHermes: true
+        ]
+        
+        android {
+            namespace "com.invoiceapp"
+            compileSdkVersion rootProject.ext.compileSdkVersion
+            
+            defaultConfig {
+                applicationId "com.invoiceapp"
+                minSdkVersion rootProject.ext.minSdkVersion
+                targetSdkVersion rootProject.ext.targetSdkVersion
+                versionCode 1
+                versionName "1.0"
+            }
+            
+            signingConfigs {
+                debug {
+                    storeFile file('debug.keystore')
+                    storePassword 'android'
+                    keyAlias 'androiddebugkey'
+                    keyPassword 'android'
+                }
+            }
+            
+            buildTypes {
+                debug {
+                    signingConfig signingConfigs.debug
+                }
+                release {
+                    signingConfig signingConfigs.debug
+                    minifyEnabled false
+                    proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+                }
+            }
+        }
+        
+        dependencies {
+            implementation("com.facebook.react:react-android")
+            implementation("com.facebook.react:hermes-android")
+            implementation("androidx.core:core-ktx:1.10.1")
+        }
+        
+        apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
+        applyNativeModulesAppBuildGradle(project)
+        EOF
+        
+        # فایل gradle-wrapper.properties
+        cat > android/gradle/wrapper/gradle-wrapper.properties << 'EOF'
+        distributionBase=GRADLE_USER_HOME
+        distributionPath=wrapper/dists
+        distributionUrl=https\://services.gradle.org/distributions/gradle-7.5.1-all.zip
+        zipStoreBase=GRADLE_USER_HOME
+        zipStorePath=wrapper/dists
+        EOF
+        
+        # فایل settings.gradle
+        cat > android/settings.gradle << 'EOF'
+        rootProject.name = 'InvoiceApp'
+        apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
+        applyNativeModulesSettingsGradle(settings)
+        include ':app'
+        EOF
+        
+        # فایل gradle.properties
+        cat > android/gradle.properties << 'EOF'
+        android.useAndroidX=true
+        android.enableJetifier=true
+        org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+        org.gradle.parallel=true
+        org.gradle.caching=true
+        EOF
+        
+        # فایل local.properties (برای SDK مسیر)
+        cat > android/local.properties << 'EOF'
+        sdk.dir=/usr/local/lib/android/sdk
+        ndk.dir=/usr/local/lib/android/sdk/ndk/23.1.7779620
+        EOF
+        
+        echo "✅ Android project structure created"
+    
+    - name: Build APK
       run: |
         cd android
-        ./gradlew assembleRelease
-
+        chmod +x gradlew
+        # ایجاد debug.keystore
+        keytool -genkey -v -keystore debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
+        ./gradlew assembleRelease --no-daemon
+    
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: app-release
-        path: android/app/build/outputs/apk/release/*.apk
+        name: invoice-app
+        path: android/app/build/outputs/apk/release/app-release.apk
