--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,211 +2,31 @@ name: Build Android APK
 
 on:
   push:
-    branches: [main]
-  workflow_dispatch:
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
+
     - name: Setup Java
       uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
-    
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-    
-    - name: Create Minimal Android Project
-      run: |
-        if [ ! -d "android" ]; then
-          echo "🚀 Creating Android project structure..."
-          
-          # ساختار اصلی پوشه‌ها
-          mkdir -p android/app/src/main/java/com/invoiceapp
-          mkdir -p android/app/src/main/res
-          mkdir -p android/gradle/wrapper
-          
-          # فایل‌های ضروری Gradle
-          cat > android/build.gradle << 'EOF'
-          buildscript {
-              ext {
-                  buildToolsVersion = "33.0.0"
-                  minSdkVersion = 21
-                  compileSdkVersion = 33
-                  targetSdkVersion = 33
-                  ndkVersion = "23.1.7779620"
-              }
-              repositories {
-                  google()
-                  mavenCentral()
-              }
-              dependencies {
-                  classpath("com.android.tools.build:gradle:7.3.1")
-                  classpath("com.facebook.react:react-native-gradle-plugin")
-              }
-          }
-          EOF
-          
-          cat > android/app/build.gradle << 'EOF'
-          apply plugin: "com.android.application"
-          apply plugin: "com.facebook.react"
-          
-          project.ext.react = [
-              enableHermes: true
-          ]
-          
-          android {
-              namespace "com.invoiceapp"
-              compileSdkVersion rootProject.ext.compileSdkVersion
-              
-              defaultConfig {
-                  applicationId "com.invoiceapp"
-                  minSdkVersion rootProject.ext.minSdkVersion
-                  targetSdkVersion rootProject.ext.targetSdkVersion
-                  versionCode 1
-                  versionName "1.0"
-              }
-              
-              signingConfigs {
-                  debug {
-                      storeFile file('debug.keystore')
-                      storePassword 'android'
-                      keyAlias 'androiddebugkey'
-                      keyPassword 'android'
-                  }
-              }
-              
-              buildTypes {
-                  debug {
-                      signingConfig signingConfigs.debug
-                  }
-                  release {
-                      signingConfig signingConfigs.debug
-                      minifyEnabled false
-                      proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-                  }
-              }
-          }
-          
-          dependencies {
-              implementation("com.facebook.react:react-android")
-              implementation("com.facebook.react:hermes-android")
-          }
-          
-          apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
-          applyNativeModulesAppBuildGradle(project)
-          EOF
-          
-          # فایل‌های دیگر
-          cat > android/gradle.properties << 'EOF'
-          android.useAndroidX=true
-          android.enableJetifier=true
-          EOF
-          
-          cat > android/gradle/wrapper/gradle-wrapper.properties << 'EOF'
-          distributionBase=GRADLE_USER_HOME
-          distributionPath=wrapper/dists
-          distributionUrl=https\://services.gradle.org/distributions/gradle-7.5.1-all.zip
-          zipStoreBase=GRADLE_USER_HOME
-          zipStorePath=wrapper/dists
-          EOF
-          
-          cat > android/settings.gradle << 'EOF'
-          rootProject.name = 'InvoiceApp'
-          apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
-          applyNativeModulesSettingsGradle(settings)
-          include ':app'
-          EOF
-          
-          # فایل MainActivity
-          cat > android/app/src/main/java/com/invoiceapp/MainActivity.java << 'EOF'
-          package com.invoiceapp;
-          
-          import com.facebook.react.ReactActivity;
-          import com.facebook.react.ReactActivityDelegate;
-          import com.facebook.react.defaults.DefaultNewArchitectureEntryPoint;
-          import com.facebook.react.defaults.DefaultReactActivityDelegate;
-          
-          public class MainActivity extends ReactActivity {
-              @Override
-              protected String getMainComponentName() {
-                  return "InvoiceApp";
-              }
-              
-              @Override
-              protected ReactActivityDelegate createReactActivityDelegate() {
-                  return new DefaultReactActivityDelegate(
-                      this,
-                      getMainComponentName(),
-                      DefaultNewArchitectureEntryPoint.getFabricEnabled()
-                  );
-              }
-          }
-          EOF
-          
-          # AndroidManifest.xml
-          cat > android/app/src/main/AndroidManifest.xml << 'EOF'
-          <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-              <uses-permission android:name="android.permission.INTERNET" />
-              <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-              <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-              
-              <application
-                android:name=".MainApplication"
-                android:label="@string/app_name"
-                android:icon="@mipmap/ic_launcher"
-                android:roundIcon="@mipmap/ic_launcher_round"
-                android:allowBackup="false"
-                android:theme="@style/AppTheme">
-                <activity
-                  android:name=".MainActivity"
-                  android:label="@string/app_name"
-                  android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
-                  android:launchMode="singleTask"
-                  android:windowSoftInputMode="adjustResize"
-                  android:exported="true">
-                  <intent-filter>
-                      <action android:name="android.intent.action.MAIN" />
-                      <category android:name="android.intent.category.LAUNCHER" />
-                  </intent-filter>
-                </activity>
-              </application>
-          </manifest>
-          EOF
-          
-          echo "✅ Android project structure created successfully"
-        else
-          echo "📁 Android folder already exists"
-        fi
-    
-    - name: Install dependencies
-      run: |
-        npm install --legacy-peer-deps
-        # نصب dependencyهای React Native
-        npm install react-native@0.72.6 --legacy-peer-deps
-    
-    - name: Build APK
-      run: |
-        cd android
-        chmod +x gradlew
-        ./gradlew assembleRelease --no-daemon
-    
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: invoice-app
-        path: android/app/build/outputs/apk/release/app-release.apk
-        retention-days: 7
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: invoice-app
-        path: android/app/build/outputs/apk/release/app-release.apk
+
+    - name: Setup EAS CLI
+      run: npm install -g eas-cli
+
+    - name: Build APK with EAS
+      run: eas build --platform android --profile preview --non-interactive
+      env:
+        EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
